
                   Rakeflurry Vesion 0.5.0
                   Release Notes

--------------------
0.5.0
- remove all keymap table when overwriting
- change conn pool to c3p0 for validation check.
- alert when job failed and finished.

0.4.0
- PK changed : accessCode to mbrNo
- show jobs service added.
- many service can use dashboard class.
- add user management.
- data file copy to hdfs. hadoop 2.0.0-alpha

0.3.0
- keymap service: show, update
- collect service except using hadoop

0.2.0
- construct dev env. 
- hibernate env.

0.1.0
- make build template.
