@@ -1,61 +1,0 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
-
-<configuration>
-    <server name="localhost" port="8100" contextPath="/rakeflurry" maxThreads="512" staticErrorRedirect="/error.jsp"/>
-    <services>
-        <service url="/collect" 
-                 class="com.skplanet.rakeflurry.service.CollectApi" 
-                 exec="request" 
-                 method="post"/>
-        <service url="/collect/show" 
-                 class="com.skplanet.rakeflurry.service.ShowJobs" 
-                 exec="request" 
-                 method="get"/>
-        <service url="/keymap/show" 
-                 class="com.skplanet.rakeflurry.service.ShowKeyMap" 
-                 exec="request" 
-                 method="get"/>
-        <service url="/keymap/overwrite" 
-                 class="com.skplanet.rakeflurry.service.OverwriteKeyMap" 
-                 exec="request" 
-                 method="post"/>
-        <service url="/error" 
-                 class="com.skplanet.cask.service.ErrorRedirect" 
-                 exec="request"
-                 method="get"/>
-    </services>
-
-    <datasources>
-    <!-- 
-        <datasource id = "caskRuntime">
-            <driverClassName>com.mysql.jdbc.Driver</driverClassName>
-            <url>jdbc:mysql://localhost:3306/cask_test?autoReconnect=true</url>
-            <username>lons</username>
-            <password>1234</password>
-            <initSQL>SELECT 1</initSQL>
-            <initialSize>10</initialSize>
-            <minIdle>10</minIdle>
-            <maxIdle>100</maxIdle>
-            <maxActive>100</maxActive>
-            <defaultAutoCommit>false</defaultAutoCommit>
-            <validateQuery>SELECT 1</validateQuery>
-        </datasource>
-         -->
-    </datasources>
-    
-    <properties>
-        <property key = "saveRuntimeIntoDb" value = "false"/>
-        <property key = "runtimeDb" value = "caskRuntime"/>
-        <property key = "localDataDir" value = "/userdata/cask_home/rakeflurry/data"/>
-        <property key = "hdfsDestUri" value = "hdfs://1.234.62.204:8020/data_test/rakeflurry_win/daily"/>
-        <property key = "hdfsChmod" value = "0775"/>
-        <property key = "apiCallTimeInterval" value = "1200"/>
-        <property key = "id" value = "lons"/>
-        <property key = "password" value = "dlwhdals"/>
-        
-        <property key = "mailSender" value = "lonslonz@daum.net"/>
-        <property key = "mailRcpt" value = "rakeflurry@sk.com"/>
-        <property key = "mailServerUrl" value = "http://1.234.62.198:8200/mail/sendpost"/>
-    </properties>
-
-</configuration>
